; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_namei.c_follow_down.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_namei.c_follow_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { i32, %struct.vfsmount* }
%struct.vfsmount = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @follow_down(%struct.path* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.path*, align 8
  %4 = alloca %struct.vfsmount*, align 8
  store %struct.path* %0, %struct.path** %3, align 8
  %5 = load %struct.path*, %struct.path** %3, align 8
  %6 = call %struct.vfsmount* @lookup_mnt(%struct.path* %5)
  store %struct.vfsmount* %6, %struct.vfsmount** %4, align 8
  %7 = load %struct.vfsmount*, %struct.vfsmount** %4, align 8
  %8 = icmp ne %struct.vfsmount* %7, null
  br i1 %8, label %9, label %27

9:                                                ; preds = %1
  %10 = load %struct.path*, %struct.path** %3, align 8
  %11 = getelementptr inbounds %struct.path, %struct.path* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @dput(i32 %12)
  %14 = load %struct.path*, %struct.path** %3, align 8
  %15 = getelementptr inbounds %struct.path, %struct.path* %14, i32 0, i32 1
  %16 = load %struct.vfsmount*, %struct.vfsmount** %15, align 8
  %17 = call i32 @mntput(%struct.vfsmount* %16)
  %18 = load %struct.vfsmount*, %struct.vfsmount** %4, align 8
  %19 = load %struct.path*, %struct.path** %3, align 8
  %20 = getelementptr inbounds %struct.path, %struct.path* %19, i32 0, i32 1
  store %struct.vfsmount* %18, %struct.vfsmount** %20, align 8
  %21 = load %struct.vfsmount*, %struct.vfsmount** %4, align 8
  %22 = getelementptr inbounds %struct.vfsmount, %struct.vfsmount* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @dget(i32 %23)
  %25 = load %struct.path*, %struct.path** %3, align 8
  %26 = getelementptr inbounds %struct.path, %struct.path* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  store i32 1, i32* %2, align 4
  br label %28

27:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %9
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local %struct.vfsmount* @lookup_mnt(%struct.path*) #1

declare dso_local i32 @dput(i32) #1

declare dso_local i32 @mntput(%struct.vfsmount*) #1

declare dso_local i32 @dget(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
